--- a/.gitignore
+++ b/.gitignore
@@ -383,6 +383,8 @@ FodyWeavers.xsd
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+/vendor
+
 
 # Local History for Visual Studio Code
 .history/
