feat: updated composer json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "mazed/designpatterns",
+    "description": "PHP design patterns",
     "type": "project",
     "autoload": {
         "psr-4": {
